// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DonutChart renders default 1`] = `
<DocumentFragment>
  <svg
    data-cy="donutChart"
    viewBox="0 0 33.33098861837907 33.33098861837907"
  >
    <circle
      cx="16.665494309189533"
      cy="16.665494309189533"
      fill="transparent"
      r="15.915494309189533"
      stroke-width="1.5"
      style="stroke: rgba(218,221,226,0.65);"
    />
    <circle
      cx="16.665494309189533"
      cy="16.665494309189533"
      fill="none"
      r="15.915494309189533"
      stroke-dasharray="10 90"
      stroke-dashoffset="125"
      stroke-width="1.5"
      style="stroke: #F00;"
    />
    <text
      style="text-anchor: middle;"
      x="16.665494309189533"
      y="16.665494309189533"
    >
      <tspan
        data-cy="donutChart-label"
        dominant-baseline="central"
        font-size="6"
      />
    </text>
  </svg>
</DocumentFragment>
`;

exports[`DonutChart renders with text and label 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: var(--themeTextColorSecondary, #76797E);
  fill: var(--themeTextColorSecondary, #76797E);
}

.inverseColorMode .emotion-0,
.emotion-0.inverseColorMode {
  color: var(--themeTextColorSecondaryInverted, #AEB0B4);
  fill: var(--themeTextColorSecondaryInverted, #AEB0B4);
}

<svg
    data-cy="donutChart"
    viewBox="0 0 33.33098861837907 33.33098861837907"
  >
    <circle
      cx="16.665494309189533"
      cy="16.665494309189533"
      fill="transparent"
      r="15.915494309189533"
      stroke-width="1.5"
      style="stroke: rgba(218,221,226,0.65);"
    />
    <circle
      cx="16.665494309189533"
      cy="16.665494309189533"
      fill="none"
      r="15.915494309189533"
      stroke-dasharray="10 90"
      stroke-dashoffset="125"
      stroke-width="1.5"
      style="stroke: #F00;"
    />
    <text
      style="text-anchor: middle;"
      x="16.665494309189533"
      y="16.665494309189533"
    >
      <tspan
        data-cy="donutChart-label"
        dominant-baseline="unset"
        font-size="6"
      >
        10%
      </tspan>
      <tspan
        class="emotion-0"
        data-cy="donutChart-text"
        font-size="3"
        x="16.665494309189533"
        y="20.865494309189533"
      >
        1 of 10
      </tspan>
    </text>
  </svg>
</DocumentFragment>
`;
